--- a/thank.html
+++ b/thank.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="thank.css">
+    <script src="thank.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <section class="sidebar">
         <div class="sidebar-container">
-
             <a href="index.html">
                 <div class="number-one">
                     <div class="number">
-                        <h1 class="numbering uno">1</h1>
+                        <h1 class="numbering">1</h1>
                     </div>
                     <div class="info">
                         <p class="sidebar-heading">Step 1</p>
@@ -63,21 +62,14 @@
     </section>
 
     <section class="content">
-        <h1 class="heading">Personal info</h1>
-        <p class="paragraph">Please provide your name, email address and phone number.</p>
-
-        <form action="">
-            <label for="name">Name</label><br>
-            <input type="text" id="name" name="your-name" required><br>
-
-            <label for="email">Email Address</label><br>
-            <input type="text" id="email" name="email-address" required><br>
-
-            <label for="number">Phone Number</label><br>
-            <input type="number" id="number" name="phone-number" required><br>
-
-            <button type="submit">Next step</button>
-        </form>
+        <div class="icon">
+            <img src="./assets/images/icon-thank-you.svg" alt="">
+        </div>
+        
+        <div class="words">
+            <h1 class="heading">Thank you!</h1>
+            <p class="paragraph">Thanks for confirming your subscription! We hope you have fun using our platform. If you ever need support, please feel free to email us support@loremgaming.com</p>
+        </div>
     </section>
 
 </body>
