--- a/index.html
+++ b/index.html
@@ -63,21 +63,22 @@
     </section>
 
     <section class="content">
-        <h1 class="heading">Personal info</h1>
-        <p class="paragraph">Please provide your name, email address and phone number.</p>
+        <div>
+            <form action="">
+                <h1 class="heading">Personal info</h1>
+                <p class="paragraph">Please provide your name, email address and phone number.</p>
+                <label for="name">Name</label><br>
+                <input type="text" id="name" name="your-name" required><br>
 
-        <form action="">
-            <label for="name">Name</label><br>
-            <input type="text" id="name" name="your-name" required><br>
+                <label for="email">Email Address</label><br>
+                <input type="text" id="email" name="email-address" required><br>
 
-            <label for="email">Email Address</label><br>
-            <input type="text" id="email" name="email-address" required><br>
+                <label for="number">Phone Number</label><br>
+                <input type="text" id="number" name="phone-number" required><br>
 
-            <label for="number">Phone Number</label><br>
-            <input type="number" id="number" name="phone-number" required><br>
-
-            <button type="submit">Next step</button>
-        </form>
+                <button type="submit" class="bt-1">Next step</button>
+            </form>
+        </div>
     </section>
 
 </body>
