--- a/plan.html
+++ b/plan.html
@@ -117,8 +117,8 @@
 
             <div class="bill">        
                 <div class="buttons">
-                    <button class="back">Go back</button>
-                    <button class="next">Next step</button>
+                    <button class="back"><a href="index.html">Go back</a></button>
+                    <button class="next"><a href="addons.html">Next step</a></button>
                 </div>
             </div>
     
