--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <label for="number">Phone Number</label><br>
                 <input type="text" id="number" name="phone-number" required><br>
 
-                <button type="submit" class="bt-1">Next step</button>
+                <button type="submit" class="bt-1"><a href="plan.html">Next step</a></button>
             </form>
         </div>
     </section>
